changed the css for lasagna to external stylesheet and created universal style sheet for all food recipes

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,28 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <style>
-      img {
-        height: 300px;
-        width: 300px;
-        padding: 20px;
-        margin: 20px;
-      }
-      * {
-        padding: 20px;
-      }
-      body {
-        background-color: bisque;
-      }
-      li {
-        width: 500px;
-        font-size: 1.3em;
-      }
-      p {
-        font-size: 1.3em;
-      }
-    </style>
-
+    <link rel="stylesheet" href="/css/food.css" />
+    <a href="/index.html">Home</a>
     <title>lasagna</title>
   </head>
   <body>
