Added chocolate mug cake page with completed steps and ingredients

--- a/recipes/chocolate-mug-cake.html
+++ b/recipes/chocolate-mug-cake.html
@@ -8,6 +8,32 @@
     <title>chocolate-mug-cake</title>
   </head>
   <body>
+    <a href="/index.html">Home</a>
     <h1>Chocolate Mug Cake</h1>
+    <img
+      src="https://storcpdkenticomedia.blob.core.windows.net/media/recipemanagementsystem/media/recipe-media-files/recipes/retail/mobileimages/2020_df_retail_dark-chocolate-mug-cake_17985_600x600.jpg?ext=.jpg"
+      alt="chocolate mug cake"
+    />
+    <h2>Description</h2>
+    <p>Warm cozy chocolate-mug-cake that will make the gloomiest days a thing of the past. Get your mugs and ingredients ready for a blast!</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>¼ cup all-purpose flour</li>
+      <li>¼ cup white sugar</li>
+      <li>2 tablespoons unsweetened cocoa powder</li>
+      <li>⅛ teaspoon baking soda</li>
+      <li>⅛ teaspoon salt</li>
+      <li>3 tablespoons milk</li>
+      <li>2 tablespoons canola oil</li>
+      <li>1 tablespoon water</li>
+      <li>¼ teaspoon vanilla extract</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+      <li>
+        Mix flour, sugar, cocoa powder, baking soda, and salt in a large microwave-safe mug; stir in milk, canola oil, water, and vanilla extract.
+      </li>
+      <li>Cook in microwave until cake is done in the middle, about 1 minute 45 seconds.</li>
+    </ol>
   </body>
 </html>
