--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         src="https://storcpdkenticomedia.blob.core.windows.net/media/recipemanagementsystem/media/recipe-media-files/recipes/retail/mobileimages/2020_df_retail_dark-chocolate-mug-cake_17985_600x600.jpg?ext=.jpg"
         alt="chocolate mug cake"
     /></a>
+    <a href="./recipes/oreo-pancake.html"><img src="https://i.insider.com/5c9109cadd08616ab27e91a4?width=995&format=jpeg" alt="oreo pancake" /></a>
   </body>
 </html>
