--- a/recipes/chocolate-mug-cake.html
+++ b/recipes/chocolate-mug-cake.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/food.css" />
-    <title>chocolate-mug-cake</title>
+    <title>chocolate mug cake</title>
   </head>
   <body>
     <a href="/index.html">Home</a>
